# spit-2dee

./: CMakeLists.txt  DESIGN.md  README.md  readme.md
demo/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/include/: core.h  ecs.h
engine/src/: core.cpp  ecs.cpp
